Structural ops primary validation
Reviewed-by: psandoz