@@ -40,6 +40,8 @@ import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
+import static jdk.incubator.code.internal.StructuralPreconditions.*;
+
 /**
  * The top-level operation class for core operations.
  * <p>
@@ -122,17 +124,8 @@ public sealed abstract class CoreOp extends Op {
         final Body body;
 
         FuncOp(ExternalizedOp def) {
-            if (!def.operands().isEmpty()) {
-                throw new IllegalStateException("Bad op " + def.name());
-            }
-
-            String funcName = def.extractAttributeValue(ATTRIBUTE_FUNC_NAME, true,
-                    v -> switch (v) {
-                        case String s -> s;
-                        case null, default -> throw new UnsupportedOperationException("Unsupported func name value:" + v);
-                    });
-
-            this(funcName, def.bodyDefinitions().get(0));
+            requireNoOperands(def);
+            this(requireAttribute(def, ATTRIBUTE_FUNC_NAME, true, String.class), requireSingleBody(def));
         }
 
         FuncOp(FuncOp that, CodeContext cc, CodeTransformer ct) {
@@ -241,13 +234,7 @@ public sealed abstract class CoreOp extends Op {
         final CodeType resultType;
 
         FuncCallOp(ExternalizedOp def) {
-            String funcName = def.extractAttributeValue(ATTRIBUTE_FUNC_NAME, true,
-                    v -> switch (v) {
-                        case String s -> s;
-                        case null, default -> throw new UnsupportedOperationException("Unsupported func name value:" + v);
-                    });
-
-            this(funcName, def.resultType(), def.operands());
+            this(requireAttribute(def, ATTRIBUTE_FUNC_NAME, true, String.class), def.resultType(), def.operands());
         }
 
         FuncCallOp(FuncCallOp that, CodeContext cc) {
@@ -308,11 +295,8 @@ public sealed abstract class CoreOp extends Op {
         final Body body;
 
         ModuleOp(ExternalizedOp def) {
-            if (!def.operands().isEmpty()) {
-                throw new IllegalStateException("Bad op " + def.name());
-            }
-
-            this(def.bodyDefinitions().get(0));
+            requireNoOperands(def);
+            this(requireSingleBody(def));
         }
 
         ModuleOp(ModuleOp that, CodeContext cc, CodeTransformer ct) {
@@ -527,7 +511,8 @@ public sealed abstract class CoreOp extends Op {
         final Op quotedOp;
 
         QuotedOp(ExternalizedOp def) {
-            this(def.bodyDefinitions().get(0));
+            requireNoOperands(def);
+            this(requireSingleBody(def));
         }
 
         QuotedOp(QuotedOp that, CodeContext cc, CodeTransformer ct) {
@@ -602,11 +587,8 @@ public sealed abstract class CoreOp extends Op {
         static final String NAME = "return";
 
         ReturnOp(ExternalizedOp def) {
-            if (def.operands().size() > 1) {
-                throw new IllegalArgumentException("Operation must have zero or one operand " + def.name());
-            }
-
-            this(def.operands().isEmpty() ? null : def.operands().get(0));
+            List<Value> operands = requireOperands(def, 0, 1);
+            this(operands.isEmpty() ? null : operands.getFirst());
         }
 
         ReturnOp(ReturnOp that, CodeContext cc) {
@@ -655,10 +637,7 @@ public sealed abstract class CoreOp extends Op {
         static final String NAME = "unreachable";
 
         UnreachableOp(ExternalizedOp def) {
-            if (!def.operands().isEmpty()) {
-                throw new IllegalArgumentException("Operation must zero operands " + def.name());
-            }
-
+            requireNoOperands(def);
             this();
         }
 
@@ -695,9 +674,7 @@ public sealed abstract class CoreOp extends Op {
         static final String NAME = "yield";
 
         YieldOp(ExternalizedOp def) {
-            if (def.operands().size() > 1) {
-                throw new IllegalArgumentException("Operation must have zero or one operand " + def.name());
-            }
+            requireOperands(def, 0, 1);
 
             this(def.operands());
         }
@@ -753,11 +730,8 @@ public sealed abstract class CoreOp extends Op {
         final Block.Reference branch;
 
         BranchOp(ExternalizedOp def) {
-            if (!def.operands().isEmpty() || def.successors().size() != 1) {
-                throw new IllegalArgumentException("Operation must have zero arguments and one successor" + def.name());
-            }
-
-            this(def.successors().get(0));
+            requireNoOperands(def);
+            this(requireSingleSuccessor(def));
         }
 
         BranchOp(BranchOp that, CodeContext cc) {
@@ -815,11 +789,8 @@ public sealed abstract class CoreOp extends Op {
         final Block.Reference falseBranch;
 
         ConditionalBranchOp(ExternalizedOp def) {
-            if (def.operands().size() != 1 || def.successors().size() != 2) {
-                throw new IllegalArgumentException("Operation must one operand and two successors" + def.name());
-            }
-
-            this(def.operands().getFirst(), def.successors().get(0), def.successors().get(1));
+            List<Block.Reference> succ = requireSuccessors(def, 2);
+            this(requireSingleOperand(def), succ.get(0), succ.get(1));
         }
 
         ConditionalBranchOp(ConditionalBranchOp that, CodeContext cc) {
@@ -896,17 +867,12 @@ public sealed abstract class CoreOp extends Op {
         final CodeType resultType;
 
         ConstantOp(ExternalizedOp def) {
-            if (!def.operands().isEmpty()) {
-                throw new IllegalArgumentException("Operation must have zero operands");
-            }
-
-            Object value = def.extractAttributeValue(ATTRIBUTE_CONSTANT_VALUE, true,
-                    v -> processConstantValue(def.resultType(), v));
-
-            this(def.resultType(), value);
+            requireNoOperands(def);
+            Object v = requireAttribute(def, ATTRIBUTE_CONSTANT_VALUE, true);
+            this(def.resultType(), processConstantValue(def, def.resultType(), v));
         }
 
-        static Object processConstantValue(CodeType t, Object value) {
+        static Object processConstantValue(ExternalizedOp def, CodeType t, Object value) {
             if (t.equals(JavaType.BOOLEAN) && value instanceof Boolean) {
                 return value;
             } else if (t.equals(JavaType.BYTE) && value instanceof Number n) {
@@ -932,8 +898,7 @@ public sealed abstract class CoreOp extends Op {
             } else if (value == ExternalizedOp.NULL_ATTRIBUTE_VALUE) {
                 return null; // null constant
             }
-
-            throw new UnsupportedOperationException("Unsupported constant type and value: " + t + " " + value);
+            throw unsupportedAttributeValueException(def, ATTRIBUTE_CONSTANT_VALUE, value);
         }
 
         ConstantOp(ConstantOp that, CodeContext cc) {
@@ -1028,22 +993,21 @@ public sealed abstract class CoreOp extends Op {
         final VarType resultType;
 
         VarOp(ExternalizedOp def) {
-            if (def.operands().size() > 1) {
-                throw new IllegalStateException("Operation must have zero or one operand");
-            }
-
-            String name = def.extractAttributeValue(ATTRIBUTE_NAME, true,
-                    v -> switch (v) {
-                        case String s -> s;
-                        case null -> "";
-                        default -> throw new UnsupportedOperationException("Unsupported var name value:" + v);
-                    });
+            List<Value> operands = requireOperands(def, 0, 1);
+            String name = def.extractAttributeValue(ATTRIBUTE_NAME, true, v -> switch (v) {
+                case String s -> s;
+                case null -> "";
+                default -> throw unsupportedAttributeValueException(def, ATTRIBUTE_NAME, v);
+            });
 
             // @@@ Cannot use canonical constructor because type is wrapped
-            super(def.operands());
+            super(operands);
 
             this.varName = name;
-            this.resultType = (VarType) def.resultType();
+            if (!(def.resultType() instanceof VarType vt)) {
+                throw structuralException(def, "invalid result type: " + def.resultType());
+            }
+            this.resultType = vt;
         }
 
         VarOp(VarOp that, CodeContext cc) {
@@ -1169,9 +1133,9 @@ public sealed abstract class CoreOp extends Op {
             return (VarOp) varValue.op();
         }
 
-        static void checkIsVarOp(Value varValue) {
+        static void requireVarOp(ExternalizedOp opdef, Value varValue) {
             if (!(varValue.type() instanceof VarType)) {
-                throw new IllegalArgumentException("Value's type is not a variable type: " + varValue);
+                throw structuralException(opdef, "value's type is not a variable type: " + varValue);
             }
         }
 
@@ -1191,12 +1155,9 @@ public sealed abstract class CoreOp extends Op {
             static final String NAME = "var.load";
 
             VarLoadOp(ExternalizedOp opdef) {
-                if (opdef.operands().size() != 1) {
-                    throw new IllegalArgumentException("Operation must have one operand");
-                }
-                checkIsVarOp(opdef.operands().get(0));
-
-                this(opdef.operands().get(0));
+                Value varValue = requireSingleOperand(opdef);
+                requireVarOp(opdef, varValue);
+                this(varValue);
             }
 
             VarLoadOp(VarLoadOp that, CodeContext cc) {
@@ -1235,20 +1196,13 @@ public sealed abstract class CoreOp extends Op {
             static final String NAME = "var.store";
 
             VarStoreOp(ExternalizedOp opdef) {
-                if (opdef.operands().size() != 2) {
-                    throw new IllegalArgumentException("Operation must have two operands");
-                }
-                checkIsVarOp(opdef.operands().get(0));
-
-                this(opdef.operands().get(0), opdef.operands().get(1));
+                List<Value> operands = requireOperands(opdef, 2);
+                requireVarOp(opdef, operands.getFirst());
+                super(operands);
             }
 
             VarStoreOp(VarStoreOp that, CodeContext cc) {
                 super(that, cc);
-            }
-
-            VarStoreOp(List<Value> values) {
-                super(values);
             }
 
             @Override
@@ -1337,17 +1291,7 @@ public sealed abstract class CoreOp extends Op {
         final int index;
 
         TupleLoadOp(ExternalizedOp def) {
-            if (def.operands().size() != 1) {
-                throw new IllegalStateException("Operation must have one operand");
-            }
-
-            int index = def.extractAttributeValue(ATTRIBUTE_INDEX, true,
-                    v -> switch (v) {
-                        case Integer i -> i;
-                        case null, default -> throw new UnsupportedOperationException("Unsupported tuple index value:" + v);
-                    });
-
-            this(def.operands().get(0), index);
+            this(requireSingleOperand(def), requireAttribute(def, ATTRIBUTE_INDEX, true, Integer.class));
         }
 
         TupleLoadOp(TupleLoadOp that, CodeContext cc) {
@@ -1417,17 +1361,8 @@ public sealed abstract class CoreOp extends Op {
         final int index;
 
         TupleWithOp(ExternalizedOp def) {
-            if (def.operands().size() != 2) {
-                throw new IllegalStateException("Operation must have two operands");
-            }
-
-            int index = def.extractAttributeValue(ATTRIBUTE_INDEX, true,
-                    v -> switch (v) {
-                        case Integer i -> i;
-                        case null, default -> throw new UnsupportedOperationException("Unsupported tuple index value:" + v);
-                    });
-
-            this(def.operands().get(0), index, def.operands().get(1));
+            super(requireOperands(def, 2));
+            this.index = requireAttribute(def, ATTRIBUTE_INDEX, true, Integer.class);
         }
 
         TupleWithOp(TupleWithOp that, CodeContext cc) {
